fix: add point details api
