# docs/swagger.json
@@ -163,6 +163,13 @@
                     },
                     {
                         "type": "integer",
+                        "description": "积分类型 1：消费积分，2：服务积分",
+                        "name": "ptype",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
                         "description": "当前页码",
                         "name": "page",
                         "in": "query"
